// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrayerRequest creates prayer request 1`] = `
Object {
  "createdByPersonAliasId": 447217,
  "firstName": "Isaac",
  "id": "PrayerRequest:b36e55d803443431e96bb4b5068147ec",
  "lastName": "Hardy",
  "text": "Pray this works.",
}
`;

exports[`PrayerRequest creates prayer request 2`] = `
Array [
  Array [
    "/PrayerRequests",
    Object {
      "CampusId": 16,
      "CategoryId": 2,
      "FirstName": "Test",
      "IsActive": true,
      "IsApproved": true,
      "IsPublic": true,
      "LastName": "bro",
      "RequestedByPersonAliasId": 123,
      "Text": "Pray this works.",
    },
  ],
]
`;

exports[`PrayerRequest gets all public prayer requests 1`] = `
Array [
  Array [
    "PrayerRequests/Public",
    Object {},
    Object {},
  ],
]
`;

exports[`PrayerRequest gets all public prayer requests 2`] = `
Array [
  Object {
    "createdByPersonAliasId": 447217,
    "firstName": "Isaac",
    "id": "PrayerRequest:b36e55d803443431e96bb4b5068147ec",
    "lastName": "Hardy",
    "text": "Pray this works.",
  },
  Object {
    "createdByPersonAliasId": 447217,
    "firstName": "Rich",
    "id": "PrayerRequest:57c465ee3cd69524d729569b338607de",
    "lastName": "Dubee",
    "text": "Help me",
  },
]
`;

exports[`PrayerRequest gets all public prayer requests by campus 1`] = `
Array [
  Array [
    "PrayerRequests/Public?%24filter=CampusId%20eq%2016",
    Object {},
    Object {},
  ],
]
`;

exports[`PrayerRequest gets all public prayer requests by campus 2`] = `
Array [
  Object {
    "createdByPersonAliasId": 447217,
    "firstName": "Isaac",
    "id": "PrayerRequest:b36e55d803443431e96bb4b5068147ec",
    "lastName": "Hardy",
    "text": "Pray this works.",
  },
]
`;

exports[`PrayerRequest gets current persons prayer requests 1`] = `Array []`;

exports[`PrayerRequest gets current persons prayer requests 2`] = `
Array [
  Object {
    "createdByPersonAliasId": 447217,
    "firstName": "Isaac",
    "id": "PrayerRequest:b36e55d803443431e96bb4b5068147ec",
    "lastName": "Hardy",
    "text": "Pray this works.",
  },
]
`;

exports[`PrayerRequest gets prayer request by id 1`] = `
Array [
  Array [
    "PrayerRequests/1",
    Object {},
    Object {},
  ],
]
`;

exports[`PrayerRequest gets prayer request by id 2`] = `
Object {
  "createdByPersonAliasId": 447217,
  "firstName": "Isaac",
  "id": "PrayerRequest:b36e55d803443431e96bb4b5068147ec",
  "lastName": "Hardy",
  "text": "Pray this works.",
}
`;

exports[`PrayerRequest increments prayed for a request 1`] = `
Object {
  "createdByPersonAliasId": 447217,
  "firstName": "Isaac",
  "id": "PrayerRequest:b36e55d803443431e96bb4b5068147ec",
  "lastName": "Hardy",
  "prayerCount": 8,
  "text": "Pray this works.",
}
`;

exports[`PrayerRequest increments prayed for a request 2`] = `
Array [
  Array [
    "PrayerRequests/Prayed/10",
    Object {},
  ],
]
`;
